concord_examples/tests/ui/rate_limit_precision_too_small.stderr
error: rate_limit window is too small for max; reduce `limit` or increase `every`
  --> tests/ui/rate_limit_precision_too_small.rs:13:17
   |
13 |                 2000000001 / 1s // ERROR: sub-nanosecond cell period
   |                 ^^^^^^^^^^
